src/test/success/function_return_void.egern
func noReturn(a: int): void {
    print(a)
}
noReturn(2)
