src/test/fail/assigning_value_to_function_fail.egern
func hello(): void {
    return
}

hello = 3
print(hello)
